Issue #22044: Fixed premature DECREF in call_tzinfo_method.